@@ -24,16 +24,17 @@ missing.
 
 Regular vs local installation
 -----------------------------
-This version of gramps requires, among others, the two things to be done:
-gconf schemas and mime types for gramps MUST be properly installed.
+This version of gramps requires, among others, the following to be done:
+
+mime types for gramps MUST be properly installed.
+
 The usual ./configure, make, and make install as a root should do the trick.
+
 But be careful if you're using the non-default options or would like
 to install without being root.
 
 The latter is possible, but you should supply additional arguments to
 autogen or configure:
-   --with-gconf-source=xml::$HOME/.gconf
-   --with-gconf-schema-file-dir=$HOME
    --with-mime-dir=$HOME/.local/share/mime
    --disable-scrollkeeper
 Most likely, such local install will also need some prefix with write
@@ -41,30 +42,21 @@ permissions for you:
    --prefix=$HOME/my_gramps_path
 
 Whether you're doing local install or regular install,
-YOU MUST INSTALL GCONF SCHEMAS AND MIME TYPES.
+YOU MUST INSTALL MIME TYPES.
 YOU HAVE BEEN WARNED!
 
 
 Installing under non-default prefix
 -----------------------------------
-As hinted above, the gconf schemas and mime types for gramps
-MUST be properly installed. The "proper install" means installing
-them where gconfd and shared mime system, respectively, will
-find them.
-
-By default, gconfd will look in these places:
-   1. Whatever is returned by running:
-      $ gconftool-2 --get-default-source
-   2. The xml::$HOME/.gconf        : this is a per-user setup, not system-wide
-      or  xml:merged:$HOME/.gconf  : this is a per-user setup, not system-wide
-There is a number of ways to let gconfd know where else
-to look, but this is outside the scope of installing gramps.
+As hinted above, mime types for gramps MUST be properly installed. 
+The "proper install" means installing
+them where the shared mime system will find them.
 
 By default, the shared mime systems will look in these places:
    1. /usr/share/mime
    2. /usr/local/share/mime   : this may be broken on some systems
    3. $HOME/.local/share/mime : this is a per-user setup, not system-wide
-Likewise, there's a number of ways to instruct the shared mime system
+There's a number of ways to instruct the shared mime system
 to look in other places, but this is the whole other story.
 
 So if you install some place other than /usr/share, you will most
@@ -79,16 +71,15 @@ something like --prefix=/usr/local/my_gramps, /var/gramps123/blah, etc.
 
 Packager's issues
 ------------------
-The above mentioned gconf schemas and mime types must be installed.
-However, the update-mime-database and the gconftool-2 calls to process
-the newly installed types and schemas must be done in POST-INSTALLATION.
+The above mime types must be installed.
+However, the update-mime-database to process the newly installed types and schemas must be done in POST-INSTALLATION.
 In packager's world, the install happens on packager's machine
 into something like /tmp/gramps-tmp. However, the postinstall
 should happen on the user's machine.
 
 To assist with that, there's an argument available in configure
 (or autogen, which will pass it to configure) which disables
-the gconf schema and mime type processing:
+mime type processing:
    --enable-packager-mode
 This argument should disable postinstall calls made during
 make install, and print a nasty warning during configure.
