@@ -16,11 +16,15 @@ The following packages are *STRONGLY RECOMMENDED* to be installed:
 
    GraphViz         Enable creation of graphs using GraphViz engine
                     http://www.graphviz.org
+   xdg              Freedesktop utilities, eg xdg-open
 
 The following packages are optional
    gtkspell         Enable spell checking in the notes
    ttf-freefont     More font support in the reports
-   yelp             Gnome help browser. You can view our help online too 
+
+No longer needed in 3.0:
+   yelp             Gnome help browser. At the moment no help is shipped
+                    with version 3.0.
 
 
 Documentation
