@@ -1,3 +1,10 @@
+2008-01-12  Benny Malengier <benny.malengier@gramps-project.org>
+	* src/GrampsDisplay.py: open url in standard way
+	* src/gramps.py: add comment on use of import gnome
+	* README:
+	* INSTALL:
+	Remove need for gconf, add need for xdg utilities
+
 2008-01-12 Raphael Ackermann <raphael.ackermann@gmail.com>
     * src/Config/__init__.py: revert wrong indentation changes
 
